Closed
Bug 240139
Opened 22 years ago
Closed 21 years ago
[FIX]Remove kOmitWS from HTMLParser
Categories
(Core :: DOM: HTML Parser, defect, P2)
Core
DOM: HTML Parser
Tracking
()
RESOLVED
FIXED
mozilla1.8alpha1
People
(Reporter: bzbarsky, Assigned: bzbarsky)
Details
Attachments
(2 files)
|
592 bytes,
text/html
|
Details | |
|
15.33 KB,
patch
|
choess
:
review+
peterv
:
superreview+
|
Details | Diff | Splinter Review |
See discussion starting at http://bugzilla.mozilla.org/show_bug.cgi?id=238989#c11
| Assignee | ||
Comment 1•22 years ago
|
||
To be clearer, unless someone has objections, I plan to remove this in early 1.8a.
Priority: -- → P2
Target Milestone: --- → mozilla1.8alpha
| Assignee | ||
Comment 2•22 years ago
|
||
| Assignee | ||
Comment 3•22 years ago
|
||
This makes the following changes:
1) Remove kOmitWS and the one place it's used
2) To make sure that whitespace is actually not stripped from <select> (as it
was even after step one), tag whitespace as kLegalOpen (can be opened
anywhere).
3) Change nsHTMLElement::CanExclude so you can't exclude kLegalOpen nodes
(again, so <select> won't exclude whitespace).
4) Since whitespace can now be anywhere (well, almost; <head> is still being
weird), the hack added for bug 42429 can be removed.
I've checked that <select> and <colgroup> still sorta work (per the testcase
attached). Bug 42429 is not regressed.
Bernd, are there useful tests I can look at for colgroup correctness?
| Assignee | ||
Updated•22 years ago
|
Attachment #146381 -
Flags: superreview?(peterv)
Attachment #146381 -
Flags: review?(choess)
| Assignee | ||
Updated•22 years ago
|
Summary: Remove kOmitWS from HTMLParser → [FIX]Remove kOmitWS from HTMLParser
Updated•22 years ago
|
Attachment #146381 -
Flags: superreview?(peterv) → superreview+
Updated•21 years ago
|
Attachment #146381 -
Flags: review?(choess) → review+
| Assignee | ||
Comment 4•21 years ago
|
||
Checked in. No appreciable effect on any perf metrics, though it reduced
codesize a bit.
Status: NEW → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
| Assignee | ||
Comment 5•21 years ago
|
||
Note: this caused bug 242503
Comment 6•21 years ago
|
||
This caused bug 278872.
You need to log in
before you can comment on or make changes to this bug.
Description
•