Remove the kOmitWS flag, make it possible to "open" whitespace and newline "tags" anywhere in the document.  Bug 240139, r=choess, sr=peterv